Use umzug as migrator engine

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^2.4.1",
     "moment": "~2.6.0",
     "resolve": "^1.0.0",
+    "umzug": "git://github.com/sequelize/umzug.git#feature/params",
     "underscore.string": "^2.3.3",
     "yargs": "~1.2.1"
   },
